Created schema of user, todos and subtodos

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chaibackend",
   "version": "1.0.0",
+  "type": "module",
   "description": " a basic app to deploy",
   "main": "index.js",
   "scripts": {
@@ -13,7 +14,9 @@
   "author": "Brad",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.9.0"
   }
 }
